--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>In some degree, the Slack's subscription is long. Nevertheless, the nature of its service reveals this necessity.
         </p>
         <p>At the same time, the careful employment of design strategies, such as the application of visual metaphor and limited
-            usage of forms by each step, exposes the desire to make the registration as simple as possible.
+            usage of forms by each step, exposes the company's intention to make the registration as simple as possible.
         </p>
         <p>For all the reasons presented above, I love Slack sign up approach.
         </p>
